[package]
name = "xv6"
version = "0.1.0"
authors = ["John Ingve Olsen <johningveolsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"
cstr_core = "0.2.0"

[build-dependencies]
#bindgen = "0.54.1"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
